menu and hover added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
 <body>
         <!-------------      Header -->
     <header>
+        <nav>
+            <div class="nav-items">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Clubs</a></li>
+                    <li><a href="#">World Cup 2023</a></li>
+                    <li><a href="#">Upcoming Matches</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+            <div class="log-in">
+                <a href=""><span><i class="fas fa-sign-in-alt"></i></span>Log in</a>
+            </div>
+        </nav>
         <!----------         Banner-start     -->
         <div class="banner">
             <div class="banner-title half-width">
