from reqired added

--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
             </div>
             <div class="subs-item">
                 <form action="#">
-                    <input placeholder="Frist Name" type="text">
-                    <input placeholder="Last Name" type="text">
-                    <input placeholder="Email Address" type="email" name="" id="">
+                    <input placeholder="Frist Name" type="text" required>
+                    <input placeholder="Last Name" type="text" required>
+                    <input placeholder="Email Address" type="email" name="" id="" required>
                     <input id="subs-btn" type="submit" value="Subscribe">
                 </form>
             </div>
