--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 </div>
                 <div class="psg club">
                     <img src="images/club/psg.png" alt="">
-                    <h3>Paris Saint-Germain F.C.</h3>
+                    <h3>Paris Saint-Germain</h3>
                 </div>
             </div>
         </section>
