--- a/index.html
+++ b/index.html
@@ -41,94 +41,102 @@
         </div>
         <!----------        Banner-End -->
     </header>
+        <!---------            Main Section -->
     <main>
+
+        <!-------        players-section -->
+
         <section class="players-section">
-            <div class="player">
+            <article class="player">
                 <div class="player-info">
                     <img src="images/players/player-1.png" alt="Neymar">
                     <h3>Neymar Jr</h3>
                     <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and Brazil national team.</p>
                 </div>
-            </div>
-            <div class="player">
+            </article>
+            <article class="player">
                 <div class="player-info">
                     <img src="images/players/player-2.png" alt="Neymar">
                     <h3>Lionel Messi</h3>
                     <p>Lionel Andrés Messi is an Argentine professional footballer who plays as a forward and captains the Argentina national team. He is currently a free agent, having played all </p>
                 </div>
-            </div>
-            <div class="player">
+            </article>
+            <article class="player">
                 <div class="player-info">
                     <img src="images/players/player-3.png" alt="Neymar">
                     <h3>Cristiano Ronaldo</h3>
                     <p>Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team</p>
                 </div>
-            </div>
-            <div class="player">
+            </article>
+            <article class="player">
                 <div class="player-info">
                     <img src="images/players/player-4.png" alt="Neymar">
                     <h3>Paulo Dybala</h3>
                     <p>Paulo Exequiel Dybala is an Argentine professional footballer who plays as a forward for Serie A club Juventus and the Argentina national team.</p>
                 </div>
-            </div>
-            <div class="player">
+            </article>
+            <article class="player">
                 <div class="player-info">
                     <img src="images/players/player-5.png" alt="Neymar">
                     <h3>Mesut Ozil </h3>
                     <p>Mesut Özil is a German professional footballer who plays as an attacking midfielder for Süper Lig club Fenerbahçe. Nicknamed "The Assist King", Özil is known for his technical skills,</p>
                 </div>
-            </div>
-            <div class="player">
+            </article>
+            <article class="player">
                 <div class="player-info">
                     <img src="images/players/player-6.png" alt="Neymar">
                     <h3>Mauro Icardi </h3>
                     <p>Mauro Emanuel Icardi is an Argentine professional footballer who plays as a striker for Ligue 1 club Paris Saint-Germain and the Argentina national team.</p>
                 </div>
-            </div>
-            <div class="player">
+            </article>
+            <article class="player">
                 <div class="player-info">
                     <img src="images/players/player-7.png" alt="Neymar">
                     <h3>Di Maria</h3>
                     <p>Ángel Fabián Di María is an Argentine professional footballer who plays for Ligue 1 club Paris Saint-Germain and the Argentina national team. He can play as either a winger</p>
                 </div>
-            </div>
-            <div class="player">
+            </article>
+            <article class="player">
                 <div class="player-info">
                     <img src="images/players/player-8.png" alt="Neymar">
                     <h3>Kylian Mbappé</h3>
                     <p>Kylian Mbappé Lottin is a French professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the France national team. Mbappé began his senior</p>
                 </div>
-            </div>
-            <div class="player">
+            </article>
+            <article class="player">
                 <div class="player-info">
                     <img src="images/players/player-9.png" alt="Neymar">
                     <h3>Mohamed Salah</h3>
                     <p>Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer who plays as a forward for Premier League club Liverpool and captains the Egypt national team</p>
                 </div>
-            </div>
-            <div class="player">
+            </article>
+            <article class="player">
                 <div class="player-info">
                     <img src="images/players/player-10.png" alt="Neymar">
                     <h3>Harry Kane</h3>
                     <p>Harry Edward Kane MBE is an English professional footballer who plays as a striker for Premier League club Tottenham Hotspur and captains the England national team.</p>
                 </div>
-            </div>
-            <div class="player">
+            </article>
+            <article class="player">
                 <div class="player-info">
                     <img src="images/players/player-11.png" alt="Neymar">
                     <h3>Kevin De Bruyne</h3>
                     <p>Kevin De Bruyne is a Belgian professional footballer who plays as a midfielder for Premier League club Manchester City, where he is vice-captain, and the Belgium national team</p>
                 </div>
-            </div>
-            <div class="player">
+            </article>
+            <article class="player">
                 <div class="player-info">
                     <img src="images/players/player-12.png" alt="Neymar">
                     <h3>Philippe Coutinho</h3>
                     <p>Philippe Coutinho Correia is a Brazilian professional footballer who plays as an attacking midfielder or winger for Spanish club Barcelona and the Brazil national team. </p>
                 </div>
-            </div>
-            
+            </article>
         </section>
+
+        <!-------        players-section End -->
+
+        <!-----------     hightligts_section -->
+
         <section class="hightligts">
            <div class="highligts-title half-width ">
                 <h1>
@@ -141,6 +149,10 @@
                 <img src="images/match.png" alt="match">
            </div>
         </section>
+         <!-----------     hightligts_section End -->
+
+         <!-- -----        upcoming-match -->
+
         <section class="upcoming-match">
             <h1>Upcoming Match</h1>
             <h3>Club Football</h3>
@@ -158,6 +170,11 @@
                 </div>
             </div>
         </section>
+
+         <!-- -----        upcoming-match End -->
+
+        <!-- ---------       subscribe-section -->
+
         <section class="subscribe-section">
             <div class="subs-title">
                 <h1>Subscribe Newsletter</h1>
@@ -172,7 +189,16 @@
                 </form>
             </div>
         </section>
+
+        <!-- ---------       subscribe-section End -->
+
     </main>
+
+    <!--------     Main end -->
+
+
+    <!--------     Footer -->
+
     <footer>
         <div class="footer-logo">
             <img src="images/Logo.png" alt="">
@@ -185,5 +211,8 @@
             <p>Copyright &copy 2022 Football</p>
         </div>
     </footer>
+
+    <!--------     Footer End -->
+    
 </body>
 </html>
